# Kafka_Visualizer

./: CMakeLists.txt  ConsumerTab.cpp  ConsumerTab.h  Images.qrc  ckafkainputdialog.cpp  ckafkainputdialog.h  config.ini  inireader.cpp  inireader.h  kakfaconsumer.cpp  kakfaconsumer.h  main.cpp  mainwindow.cpp  mainwindow.h
